--- a/AppTakeAway/app/src/main/res/layout/activity_cart.xml
+++ b/AppTakeAway/app/src/main/res/layout/activity_cart.xml
@@ -46,7 +46,7 @@
         android:layout_marginBottom="8dp"
         android:background="#000000"
         android:backgroundTint="#000000"
-        android:text="PAY"
+        android:text="PAGA"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
