--- a/AppTakeAway/app/src/main/res/layout/activity_initialscreen.xml
+++ b/AppTakeAway/app/src/main/res/layout/activity_initialscreen.xml
@@ -32,7 +32,7 @@
         android:layout_marginTop="84dp"
         android:background="@drawable/button_background"
         android:padding="16dp"
-        android:text="Continuar como invitado"
+        android:text="Continuar com a convidat"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +47,7 @@
         android:layout_marginTop="40dp"
         android:background="@drawable/button_background"
         android:padding="16dp"
-        android:text="Registrar-se / Iniciar sesión"
+        android:text="Registrar-se / Iniciar sessió"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
