--- a/AppTakeAway/app/src/main/res/layout/activity_main.xml
+++ b/AppTakeAway/app/src/main/res/layout/activity_main.xml
@@ -29,17 +29,17 @@
         android:id="@+id/searchView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/rounded_search_view_background"
         android:elevation="4dp"
         app:iconifiedByDefault="false"
-        app:queryHint="Buscar productos..."
-        app:queryBackground="@null"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/cartButton"
         app:layout_constraintStart_toEndOf="@id/userButton"
-        app:layout_constraintEnd_toStartOf="@id/cartButton" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:queryBackground="@null"
+        app:queryHint="Buscar productes..." />
 
     <!-- Botón de carrito de compras -->
     <ImageButton
