--- a/AppTakeAway/app/src/main/res/layout/order_line_item.xml
+++ b/AppTakeAway/app/src/main/res/layout/order_line_item.xml
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="4dp"
-            android:text="Nombre del producto"
+            android:text="Nom del producte"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="4dp"
-            android:text="Precio del producto"
+            android:text="Preu del producte"
             android:textSize="16sp"
             android:textStyle="bold" />
     </LinearLayout>
